update booking 23/4